--- a/package.json
+++ b/package.json
@@ -8,39 +8,41 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.2",
-    "@ryanbrandt/react-quick-ui": "../react-quick-UI",
-    "apisauce": "^2.1.5",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "react-transition-group": "^4.4.2",
-    "redux": "^4.2.0",
-    "sass": "^1.52.1"
+    "@reduxjs/toolkit": "^2.0.1",
+    "@ryanbrandt/react-quick-ui": "file:../react-quick-UI#../react-quick-UI::hash=636007&locator=personal-page%40workspace%3A.",
+    "apisauce": "^3.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
+    "react-router": "^6.21.1",
+    "react-router-dom": "^6.21.1",
+    "react-transition-group": "^4.4.5",
+    "redux": "^5.0.1",
+    "sass": "^1.69.7"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.1",
-    "@types/node": "^17.0.36",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-transition-group": "^4.4.5",
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
-    "@vitejs/plugin-react": "^1.3.0",
-    "eslint": "^8.16.0",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.7",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
+    "@types/react-redux": "^7.1.33",
+    "@types/react-transition-group": "^4.4.10",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-no-relative-import-paths": "^1.3.3",
-    "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-plugin-react-prefer-function-component": "^2.0.0",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.9"
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-cypress": "^2.15.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-no-relative-import-paths": "^1.5.3",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-prefer-function-component": "^3.3.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11"
   },
-  "packageManager": "yarn@3.2.1"
+  "packageManager": "yarn@4.0.2"
 }
